package ucf.assignments;

import javafx.event.ActionEvent;

public class ListAddController {
    public void addListButtonClicked(ActionEvent actionEvent) {
        //adds the items in the display to the items where they belong
    }
}
