package ucf.assignments;

import javafx.event.ActionEvent;

public class TodolistAddController {
    public void addTitleButtonClicked(ActionEvent actionEvent) {
        //adds the item in the display to the todolist class
    }
}
