package ucf.assignments;

public class addToDoList {
    //will add to the to do list title and create a new List array for that to do list
    //makes sure that it is in the todolist
}
