package ucf.assignments;

public class editItem {
    //adds a function that will edit a to do list item
    //the function will call what needs to be edited then will push that to the to do list item

    //add a function to change the boolean for complete to true or false

}
