package ucf.assignments;

public class removeItemList {

    //calls the todolistlist and removes the item
    //sorts the list so that its replaces the blank space
}
