package ucf.assignments;

public class removeToDoList {

    //calls the todolistlist class and removes the items in there
    //calls the todolist class and removes the title
    //sorts the todolist so its in order
}
