package ucf.assignments;

public class toDoList {
    //To do list string for the name
    //make sure that it is an array that can hold all the information like toDoList[] tdl = new toDoList[100]

    private toDoList (){
        //this title will equal a new title
    }

    public String getTitle(){

        //will get the string and return it for the title;
        return "";

    }
}
