package ucf.assignments;

public class toDoListList {
    //title string for the item
    //due date for the item
    //boolean for complete or not
    //description for the item being insertedd

    //functions that can add those items to the class
    //make sure that it is an array that can hold all the information like toDoListlist[] tdll = new toDoListList[100]
}
